# json2jsonl

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: BUILD_DOCKER_IMAGE.yaml
docker/: cargo-config.toml  platform.sh
src/: main.rs
